# bid-blitzkrieg

./: LICENSE  README.md  app.py  forms.py  models.py  package-lock.json  pyproject.toml  replit.md  routes.py
attached_assets/: Pasted-Bid-Blitzkrieg-Bid-Blitzkrieg-is-a-powerful-and-feature-rich-online-auction-platform-built-with-Djan-1755777397095_1755777397095.txt
project/: settings.py
static/css/: style.css
static/js/: auction.js
static/uploads/: .gitkeep
templates/: 404.html  500.html  base.html  index.html
templates/auctions/: create.html  detail.html  list.html
templates/auth/: login.html  register.html
templates/dashboard/: admin.html  buyer.html  manage_categories.html  manage_users.html  seller.html
