[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.5",
    "django-crispy-forms>=2.4",
    "email-validator>=2.2.0",
    "flask-wtf>=1.2.2",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "flask-mail>=0.10.0",
    "wtforms>=3.2.1",
    "werkzeug>=3.1.3",
    "sqlalchemy>=2.0.43",
    "flask-login>=0.6.3",
]
